rust-examples/tests/compile-fail/Rule_20_2_'.rs
#![deny(clippy)]
#[deny(warnings)]

fn main() {
    println!("This file's name is invalid.");
}
